--- a/index.html
+++ b/index.html
@@ -26,7 +26,50 @@
       </div>
       <button class="profile__add-button"><img src="images/plus.svg" alt="добавить"></button>
     </section>
-    <section class="elements content__elements"></section>
+    <section class="elements content__elements">
+      <article class="element">
+        <img src="images/karajaevsk.jpg" alt="карачаевск" class="element__photo">
+        <div class="element__footer">
+          <h3 class="element__title">Карачаевск</h3>
+          <img src="images/like.svg" alt="лайк" class="element__like">
+        </div>
+      </article>
+      <article class="element">
+        <img src="images/elbrus.png" alt="эльбрус" class="element__photo">
+        <div class="element__footer">
+          <h3 class="element__title">Гора Эльбрус</h3>
+          <img src="images/like.svg" alt="лайк" class="element__like">
+        </div>
+      </article>
+      <article class="element">
+        <img src="images/dombai.png" alt="домбай" class="element__photo">
+        <div class="element__footer">
+          <h3 class="element__title">Домбай</h3>
+          <img src="images/like.svg" alt="лайк" class="element__like">
+        </div>
+      </article>
+      <article class="element">
+        <img src="images/elbrus.png" alt="эльбрус" class="element__photo">
+        <div class="element__footer">
+          <h3 class="element__title">Гора Эльбрус</h3>
+          <img src="images/like.svg" alt="лайк" class="element__like">
+        </div>
+      </article>
+      <article class="element">
+        <img src="images/dombai.png" alt="домбай" class="element__photo">
+        <div class="element__footer">
+          <h3 class="element__title">Домбай</h3>
+          <img src="images/like.svg" alt="лайк" class="element__like">
+        </div>
+      </article>
+      <article class="element">
+        <img src="images/karajaevsk.jpg" alt="карачаевск" class="element__photo">
+        <div class="element__footer">
+          <h3 class="element__title">Карачаево-Черкеск</h3>
+          <img src="images/like.svg" alt="лайк" class="element__like">
+        </div>
+      </article>
+    </section>
   </main>
 </body>
 </html>
