--- a/index.html
+++ b/index.html
@@ -71,5 +71,8 @@
       </article>
     </section>
   </main>
+  <footer class="footer page__footer">
+    <h5 class="footer__text">© 2020 Mesto Russia</h5>
+  </footer>
 </body>
 </html>
