Добавлен адаптив для планшетов

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <section class="profile content__profile">
       <div class="profile__left-items">
         <img src="images/jak-if-custo.png" alt="жак-ив кусто" class="profile__avatar">
-        <div class="profile__profile-info">
+        <div class="profile__info">
           <div class="profile__name-edit">
             <h1 class="profile__name">Жак-Ив Кусто</h1>
             <button class="profile__edit-button"><img src="images/edit.svg" alt="редактировать"></button>
