--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="profile__info">
           <div class="profile__name-edit">
             <h1 class="profile__name">Жак-Ив Кусто</h1>
-            <button class="profile__edit-button"><img src="images/edit.svg" alt="редактировать"></button>
+            <button class="profile__edit-button"></button>
           </div>
           <p class="profile__profession">Исследователь океана</p>
         </div>
