--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
   <title>Mesto</title>
 </head>
 <body class="page">
+  <div class="popup page__popup popup__none">
+    <div class="popup__container">
+      <h3 class="popup__header">Редактировать профиль</h3>
+      <form class="popup__form">
+        <input type="text" class="popup__field" placeholder="Жак-Ив Кусто">
+        <input type="text" class="popup__field" placeholder="Исследователь океана">
+      </form>
+      <button class="popup__button">Сохранить</button>
+      <img src="images/krest.svg" alt="закрыть" class="popup__krest">
+    </div>
+  </div>
   <header class="header page__header">
     <img src="images/mesto-logo.svg" alt="логотип место" class="header__logo">
     <div class="header__line"></div>
