--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <div class="popup__container">
       <h3 class="popup__header">Редактировать профиль</h3>
       <form class="popup__form">
-        <input type="text" class="popup__field" placeholder="Жак-Ив Кусто">
-        <input type="text" class="popup__field" placeholder="Исследователь океана">
+        <input type="text" class="popup__field" id="nameInput" value="Жак-Ив Кусто">
+        <input type="text" class="popup__field" id="jobInput" value="Исследователь океана">
+        <button class="popup__button">Сохранить</button>
       </form>
-      <button class="popup__button">Сохранить</button>
       <img src="images/krest.svg" alt="закрыть" class="popup__krest">
     </div>
   </div>
@@ -85,5 +85,6 @@
   <footer class="footer page__footer">
     <h5 class="footer__text">© 2020 Mesto Russia</h5>
   </footer>
+  <script src="scripts/script.js"></script>
 </body>
 </html>
