Исправлены ещё ошибки после тестов яндекса

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Mesto</title>
 </head>
 <body class="page">
-  <div class="popup page__popup popup__none">
+  <div class="popup page__popup page__none">
     <div class="popup__container">
       <h3 class="popup__header">Редактировать профиль</h3>
       <form class="popup__form">
