--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="profile__info">
           <div class="profile__name-edit">
             <h1 class="profile__name">Жак-Ив Кусто</h1>
-            <button class="profile__edit-button" type="menu"></button>
+            <button class="profile__edit-button" type="button"></button>
           </div>
           <p class="profile__profession">Исследователь океана</p>
         </div>
