--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <div class="popup__container">
       <h2 class="popup__header">Редактировать профиль</h2>
       <form class="popup__form" name="popup">
-        <input type="text" class="popup__field" id="nameInput">
-        <input type="text" class="popup__field" id="jobInput">
+        <input type="text" class="popup__field" id="nameInput" name="nameInput">
+        <input type="text" class="popup__field" id="jobInput" name="jobInput">
         <button class="popup__button" type="submit">Сохранить</button>
       </form>
       <button class="popup__krest" type="reset"></button>
