Исправлены последние ошибки

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Mesto</title>
 </head>
 <body class="page">
-  <div class="popup page__popup popup_none">
+  <div class="popup page__popup">
     <div class="popup__container">
       <h2 class="popup__header">Редактировать профиль</h2>
       <form class="popup__form" name="popup">
