--- a/index.html
+++ b/index.html
@@ -8,7 +8,25 @@
   <title>Mesto</title>
 </head>
 <body class="page">
-  <div class="popup page__popup">
+  <div class="popup" id="bigPicture">
+    <div class="popup__image-container">
+      <img src="images/karajaevsk.jpg" alt="увеличенная картинка" class="popup__image">
+      <p class="popup__footer-text">Аркхыз</p>
+      <button class="popup__krest" type="reset"></button>
+    </div>
+  </div>
+  <div class="popup page__popup" id="cardPopup">
+    <div class="popup__container">
+      <h2 class="popup__header">Новое место</h2>
+      <form class="popup__form" name="popup">
+        <input type="text" class="popup__field" id="placeName" name="placeName" placeholder="Название">
+        <input type="text" class="popup__field" id="imagePath" name="imagePath" placeholder="Ссылка на картинку">
+        <button class="popup__button" type="submit">Создать</button>
+      </form>
+      <button class="popup__krest" type="reset"></button>
+    </div>
+  </div>
+  <div class="popup page__popup" id="popupProfile">
     <div class="popup__container">
       <h2 class="popup__header">Редактировать профиль</h2>
       <form class="popup__form" name="popup">
@@ -37,53 +55,23 @@
       <button class="profile__add-button" type="button"></button>
     </section>
     <section class="elements content__elements">
-      <article class="element">
-        <img src="images/karajaevsk.jpg" alt="карачаевск" class="element__photo">
-        <div class="element__footer">
-          <h2 class="element__title">Карачаевск</h2>
-          <button class="element__button" type="button"></button>
-        </div>
-      </article>
-      <article class="element">
-        <img src="images/elbrus.png" alt="эльбрус" class="element__photo">
-        <div class="element__footer">
-          <h2 class="element__title">Гора Эльбрус</h2>
-          <button class="element__button" type="button"></button>
-        </div>
-      </article>
-      <article class="element">
-        <img src="images/dombai.png" alt="домбай" class="element__photo">
-        <div class="element__footer">
-          <h2 class="element__title">Домбай</h2>
-          <button class="element__button" type="button"></button>
-        </div>
-      </article>
-      <article class="element">
-        <img src="images/elbrus.png" alt="эльбрус" class="element__photo">
-        <div class="element__footer">
-          <h2 class="element__title">Гора Эльбрус</h2>
-          <button class="element__button" type="button"></button>
-        </div>
-      </article>
-      <article class="element">
-        <img src="images/dombai.png" alt="домбай" class="element__photo">
-        <div class="element__footer">
-          <h2 class="element__title">Домбай</h2>
-          <button class="element__button" type="button"></button>
-        </div>
-      </article>
-      <article class="element">
-        <img src="images/karajaevsk.jpg" alt="карачаевск" class="element__photo">
-        <div class="element__footer">
-          <h2 class="element__title">Карачаево-Черкеск</h2>
-          <button class="element__button" type="button"></button>
-        </div>
-      </article>
     </section>
   </main>
   <footer class="footer page__footer">
     <p class="footer__text">© 2020 Mesto Russia</p>
   </footer>
+
+  <template id="public">
+    <article class="element">
+      <button class="element__delete" type="button"></button>
+      <img class="element__photo">
+      <div class="element__footer">
+        <h2 class="element__title"></h2>
+        <button class="element__like" type="button"></button>
+      </div>
+    </article>
+  </template>
+
   <script src="scripts/script.js"></script>
 </body>
 </html>
