--- a/index.html
+++ b/index.html
@@ -5,25 +5,27 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="pages/index.css">
+  <script src="scripts/cards.js" defer></script>
+  <script src="scripts/script.js" defer></script>
   <title>Mesto</title>
 </head>
 <body class="page">
   <div class="popup" id="bigPicture">
     <div class="popup__image-container">
-      <img src="images/karajaevsk.jpg" alt="увеличенная картинка" class="popup__image">
-      <p class="popup__footer-text">Аркхыз</p>
-      <button class="popup__krest" type="reset"></button>
+      <img src="" alt="увеличенная картинка" class="popup__image">
+      <p class="popup__footer-text"></p>
+      <button class="popup__close" type="reset" aria-label="Close"></button>
     </div>
   </div>
   <div class="popup page__popup" id="cardPopup">
     <div class="popup__container">
       <h2 class="popup__header">Новое место</h2>
       <form class="popup__form" name="popup">
-        <input type="text" class="popup__field" id="placeName" name="placeName" placeholder="Название">
-        <input type="text" class="popup__field" id="imagePath" name="imagePath" placeholder="Ссылка на картинку">
+        <input type="text" class="popup__field" id="placeName" name="placeName" placeholder="Название" required>
+        <input type="text" class="popup__field" id="imagePath" name="imagePath" placeholder="Ссылка на картинку" required type="url">
         <button class="popup__button" type="submit">Создать</button>
       </form>
-      <button class="popup__krest" type="reset"></button>
+      <button class="popup__close" type="reset" aria-label="Close"></button>
     </div>
   </div>
   <div class="popup page__popup" id="popupProfile">
@@ -34,7 +36,7 @@
         <input type="text" class="popup__field" id="jobInput" name="jobInput">
         <button class="popup__button" type="submit">Сохранить</button>
       </form>
-      <button class="popup__krest" type="reset"></button>
+      <button class="popup__close" type="reset" aria-label="Close"></button>
     </div>
   </div>
   <header class="header page__header">
@@ -47,12 +49,12 @@
         <div class="profile__info">
           <div class="profile__name-edit">
             <h1 class="profile__name">Жак-Ив Кусто</h1>
-            <button class="profile__edit-button" type="button"></button>
+            <button class="profile__edit-button" type="button" aria-label="Open"></button>
           </div>
           <p class="profile__profession">Исследователь океана</p>
         </div>
       </div>
-      <button class="profile__add-button" type="button"></button>
+      <button class="profile__add-button" type="button" aria-label="Open"></button>
     </section>
     <section class="elements content__elements">
     </section>
@@ -61,17 +63,15 @@
     <p class="footer__text">© 2020 Mesto Russia</p>
   </footer>
 
-  <template id="public">
+  <template id="templateCard">
     <article class="element">
       <button class="element__delete" type="button"></button>
       <img class="element__photo">
       <div class="element__footer">
         <h2 class="element__title"></h2>
-        <button class="element__like" type="button"></button>
+        <button aria-label="Like" class="element__like" type="button"></button>
       </div>
     </article>
   </template>
-
-  <script src="scripts/script.js"></script>
 </body>
 </html>
