--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body class="page">
   <div class="popup" id="bigPicture">
     <div class="popup__image-container">
-      <img src="" alt="увеличенная картинка" class="popup__image">
+      <img src="images/elbrus.png" alt="увеличенная картинка" class="popup__image">
       <p class="popup__footer-text"></p>
       <button class="popup__close" type="reset" aria-label="Close"></button>
     </div>
@@ -22,7 +22,7 @@
       <h2 class="popup__header">Новое место</h2>
       <form class="popup__form" name="popup">
         <input type="text" class="popup__field" id="placeName" name="placeName" placeholder="Название" required>
-        <input type="text" class="popup__field" id="imagePath" name="imagePath" placeholder="Ссылка на картинку" required type="url">
+        <input type="url" class="popup__field" id="imagePath" name="imagePath" placeholder="Ссылка на картинку" required>
         <button class="popup__button" type="submit">Создать</button>
       </form>
       <button class="popup__close" type="reset" aria-label="Close"></button>
