--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="pages/index.css">
   <script src="scripts/cards.js" defer></script>
   <script src="scripts/script.js" defer></script>
+  <script src="scripts/validation.js" defer></script>
   <title>Mesto</title>
 </head>
 <body class="page">
@@ -20,10 +21,12 @@
   <div class="popup page__popup" id="cardPopup">
     <div class="popup__container">
       <h2 class="popup__header">Новое место</h2>
-      <form class="popup__form" name="popup">
+      <form class="popup__form" name="card-form">
         <input type="text" class="popup__field" id="placeName" name="placeName" placeholder="Название" required>
+        <span class="popup__error"></span>
         <input type="url" class="popup__field" id="imagePath" name="imagePath" placeholder="Ссылка на картинку" required>
-        <button class="popup__button" type="submit">Создать</button>
+        <span class="popup__error"></span>
+        <button class="popup__button popup__button_invalid" type="submit" disabled>Создать</button>
       </form>
       <button class="popup__close" type="reset" aria-label="Close"></button>
     </div>
@@ -31,10 +34,12 @@
   <div class="popup page__popup" id="popupProfile">
     <div class="popup__container">
       <h2 class="popup__header">Редактировать профиль</h2>
-      <form class="popup__form" name="popup">
-        <input type="text" class="popup__field" id="nameInput" name="nameInput">
-        <input type="text" class="popup__field" id="jobInput" name="jobInput">
-        <button class="popup__button" type="submit">Сохранить</button>
+      <form class="popup__form" name="profile-form">
+        <input type="text" class="popup__field" id="nameInput" name="nameInput" minlength="2" maxlength="40" required>
+        <span class="popup__error"></span>
+        <input type="text" class="popup__field" id="jobInput" name="jobInput" minlength="2" maxlength="200" required>
+        <span class="popup__error"></span>
+        <button class="popup__button popup__button_valid" type="submit">Сохранить</button>
       </form>
       <button class="popup__close" type="reset" aria-label="Close"></button>
     </div>
